messaging_app/messaging_app/deployment.yaml
# messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: django-messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
      - name: django-app
        image: damaris70/messaging_app:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP
  selector:
    app: django-messaging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
